attempted fix for occaisional progress bar misalignment (fixed by refresh)

--- a/trunk/package/webif/files/www/themes/xwrt/webif.css
+++ b/trunk/package/webif/files/www/themes/xwrt/webif.css
@@ -476,6 +476,7 @@ dt,
 .progressbar-whole
 {
 	border: dotted gray;
+	float: right;
 }
 
 .progressbar-filled
